quick pic change

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     Hi, I am <strong>Lucas Shearer</strong>
                 </h1>
                 <p class="section__subtitle section__subtitle--intro">front-end dev</p>
-                <img src="img/dev-jane-01.jpg" alt="a pic of luke smiling" class="intro__img">
+                <img src="img/lucas.jpg" alt="a pic of luke smiling" class="intro__img">
             </seciton>
 
             <!-- my Services-->
@@ -77,7 +77,7 @@
                     <p> about me body part 2 yayayyaya</p>
                 </div>
 
-                <img src="img/dev-jane-02.jpg" alt="Luke leaning leaning against a wall" class="about-me__img">
+                <img src="img/lucas.jpg" alt="Luke leaning leaning against a wall" class="about-me__img">
             </section>
 
             <!-- My Work-->
