Customized to my information / projects

--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
         <!--these are the fonts-->
         <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap" rel="stylesheet">
 
+        <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Roboto+Slab:400,700&display=swap" rel="stylesheet"> 
+
         <link rel="stylesheet" href="css/style.css">
 
     </head>
     <body>
-            <header>
+            <header id="home">
                 <div class="logo">
-                    <img src="img/devjane.png" alt="">
+                    <img src="" alt=""> <!--img/DevLukeLogo.png-->
                 </div>
                 <button class="nav-toggle" aria-label="toggle navigation">
                     <span class="hamburger"></span>
@@ -35,11 +37,11 @@
             </header>
 
             <!-- Introduction -->
-            <seciton class="intro" id="home">
+            <seciton class="intro">
                 <h1 class="section__title section__title--intro">
-                    Hi, I am <strong>Lucas Shearer</strong>
+                    <strong>Lucas Shearer</strong>
                 </h1>
-                <p class="section__subtitle section__subtitle--intro">front-end dev</p>
+                <p class="section__subtitle section__subtitle--intro">BS in Software Engineering</p>
                 <img src="img/lucas.jpg" alt="a pic of luke smiling" class="intro__img">
             </seciton>
 
@@ -48,18 +50,18 @@
                 <h2 class="section__title section__title--services">What I do</h2>
                 <div class="services">
                     <div class="service">
-                        <h3>Design</h3>
-                        <p>Here is design paragraoh. The Premier League, often referred to as the English Premier League or the EPL outside England, is the top level of the English football league system. Contested by 20 clubs, it operates on a system of promotion and relegation with the English Football League.</p>
+                        <h3>Languages</h3>
+                        <p><li>C# (Intermediate)</li><li>C/C++ (Intermediate)</li><li>SQL (Intermediate)</li><li>Python (Beginner)</li><li>Java (Beginner)</li><li>HTML/CSS (Beginner)</li></p>
                     </div> <!-- /service-->
 
                     <div class="service">
-                        <h3>E-commerce</h3>
-                        <p>E commerce stuff. The Premier League, often referred to as the English Premier League or the EPL outside England, is the top level of the English football league system. Contested by 20 clubs, it operates on a system of promotion and relegation with the English Football League.</p>
+                        <h3>Technologies</h3>
+                        <p><li>Visual Studio</li><li>Visual Studio Code</li><li>Git / Github</li><li>GitKraken</li><li>Linux</li><li>PostgreSQL</li></p>
                     </div> <!-- /service-->
 
                     <div class="service">
-                        <h3>WordPress</h3>
-                        <p>Wordpress stuff. The Premier League, often referred to as the English Premier League or the EPL outside England, is the top level of the English football league system. Contested by 20 clubs, it operates on a system of promotion and relegation with the English Football League.</p>
+                        <h3>Courses</h3>
+                        <p><li>Advanced Data Structures C/C++</li><li>Object-Oriented Software Principles</li><li>Programming Language Design</li><li>Systems Programming C/C++</li><li>Software Engineering Principles</li><li>Software Maintenance</li><li>Intro to Computer Networks</li><li>Intro To Machine Learning</li><li>Intro to Database Systems</li><li>Systems Concepts and Programming</li><li>Software Design and Architecture</li><li>And More</li></p>
                     </div> <!-- /service-->
                 </div> <!-- / services-->
 
@@ -70,11 +72,11 @@
             <!-- About Me-->
             <section class="about-me" id="about">
                 <h2 class="section__title section__title--about">Who I am</h2>
-                <p class="section__subtitle section__subtitle--about">Designer and developer based out of NYC</p>
+                <p class="section__subtitle section__subtitle--about">Washington State University Graduate</p>
 
                 <div class="about-me__body">
-                    <p> about me body hahahahhahah</p>
-                    <p> about me body part 2 yayayyaya</p>
+                    <p>I recently graduated with a B.S. in Software Engineering from WSU. I am eager to find a job as a Developer in a company that cultivates learning and growth.</p>
+                    <p>Previous to WSU, I graduated with a B.S in Kinesiology from Western Washington University but decided to change career paths to quench my thirst for creation, skill improvement and acquisition.</p>
                 </div>
 
                 <img src="img/lucas.jpg" alt="Luke leaning leaning against a wall" class="about-me__img">
@@ -89,48 +91,33 @@
                 <div class="portfolio">
 
                     <!-- Portfolio Item 01-->
-                    <a href="portfolio-item.html" class="portfolio__item">
-                        <img src="img/portfolio-01.jpg" alt="" class="portfolio__img">
+                    <a href="portfolio-Restaurant.html" class="portfolio__item">
+                        <img src="img/restaurant_main.png" alt="" class="portfolio__img">
                     </a>
 
                     <!-- Portfolio Item 02-->
-                    <a href="portfolio-item.html" class="portfolio__item">
-                        <img src="img/portfolio-02.jpg" alt="" class="portfolio__img">
+                    <a href="portfolio-Spreadsheet.html" class="portfolio__item">
+                        <img src="img/spreadsheet_main.png" alt="" class="portfolio__img">
                     </a>
 
                     <!-- Portfolio Item 03-->
-                    <a href="#" class="portfolio__item">
-                        <img src="img/portfolio-03.jpg" alt="" class="portfolio__img">
+                    <a href="portfolio-Rain_Predictor.html" class="portfolio__item">
+                        <img src="img/ML-Python_main.png" alt="" class="portfolio__img">
                     </a>
 
                     <!-- Portfolio Item 04-->
-                    <a href="#" class="portfolio__item">
-                        <img src="img/portfolio-04.jpg" alt="" class="portfolio__img">
+                    <a href="portfolio-TeamRocketGame.html" class="portfolio__item">
+                        <img src="img/Bullet_Game_Main.png" alt="" class="portfolio__img">
                     </a>
                     <!-- Portfolio Item 05-->
-                    <a href="#" class="portfolio__item">
-                        <img src="img/portfolio-05.jpg" alt="" class="portfolio__img">
+                    <a href="portfolio-Eventure.html" class="portfolio__item">
+                        <img src="img/Eventure_Main.png" alt="" class="portfolio__img">
                     </a>
                     <!-- Portfolio Item 06-->
-                    <a href="#" class="portfolio__item">
-                        <img src="img/portfolio-06.jpg" alt="" class="portfolio__img">
+                    <a href="portfolio-RoR_Messenger.html" class="portfolio__item">
+                        <img src="img/Rails_Project-Main.png" alt="" class="portfolio__img">
                     </a>
-                    <!-- Portfolio Item 07-->
-                    <a href="#" class="portfolio__item">
-                        <img src="img/portfolio-07.jpg" alt="" class="portfolio__img">
-                    </a>
-                    <!-- Portfolio Item 08-->
-                    <a href="#" class="portfolio__item">
-                        <img src="img/portfolio-08.jpg" alt="" class="portfolio__img">
-                    </a>
-                    <!-- Portfolio Item 09-->
-                    <a href="#" class="portfolio__item">
-                        <img src="img/portfolio-09.jpg" alt="" class="portfolio__img">
-                    </a>
-                    <!-- Portfolio Item 10-->
-                    <a href="#" class="portfolio__item">
-                        <img src="img/portfolio-10.jpg" alt="" class="portfolio__img">
-                    </a>
+
                 </div>
             </section>
 
@@ -139,13 +126,10 @@
             <footer class="footer">
                 <a href="mailto:luke.t.shearer@gmail.com" class="footer__link">luke.t.shearer@gmail.com</a>
                 <ul class="social-list">
-                    <li class="social-list__item"><a class="social-list__link" href="https://codepen.io"><i class="fab fa-github"></i></a></li>
-                    <li class="social-list__item"><a class="social-list__link" href="https://dribble.com"><i class="fab fa-github"></i></a></li>
-                    <li class="social-list__item"><a class="social-list__link" href="https://twitter.com">
-                        <i class="fab fa-linkedin"></i>
-                    </a></li>
-                    <li class="social-list__item"><a class="social-list__link" href="https://github.com">
-                        <i class="fab fa-github"></i>
+                    <li class="social-list__item"><a class="social-list__link" href="https://github.com/lshearer20" target="_blank">
+                        <i class="fab fa-github"></i></a></li>
+                    <li class="social-list__item"><a class="social-list__link" href="https://www.linkedin.com/in/luke-shearer/" target="_blank">
+                        <i class="fab fa-linkedin"></i></a></li>
                     </a></li>
                 </ul>
             </footer>
