--- a/portfolio-Spreadsheet.html
+++ b/portfolio-Spreadsheet.html
@@ -19,7 +19,7 @@
     <body>
             <header>
                 <div class="logo">
-                    <img src="img/devjane.png" alt="">
+                    <img src="" alt="">
                 </div>
                 <button class="nav-toggle" aria-label="toggle navigation">
                     <span class="hamburger"></span>
@@ -37,17 +37,21 @@
             <!-- Introduction -->
             <seciton class="intro">
                 <h1 class="section__title section__title--intro">
-                    The title <strong>of my project</strong>
+                    <strong>Spreadsheet Application</strong>
                 </h1>
-                <p class="section__subtitle section__subtitle--intro">A short subtitle</p>
-                <img src="img/portfolio-01.jpg" alt="port1" class="intro__img">
+                <p class="section__subtitle section__subtitle--intro"></p>
+                <img src="img/SpreadSheet_ScreenCap.png" alt="port1" class="intro__img">
             </seciton>
 
             <div class="portfolio-item-individual">
-                <p>Fill paragraphhhhh asdf df</p>
-                <img src="img/portfolio-01.jpg" alt="pic2">
-                <p>Fill paragraphhhhh asdf df</p>
-                <p>Fill paragraphhhhh asdf df</p>
+                <p><li>This project is a simple spreadsheet done using a C# winforms application. This was a project for my object oriented software principles class. The project supports save, load, cell referencing, and simple arithmetic calculations with correct precedence.</li>
+                <li>Github: <a href="https://github.com/lshearer20/Spreadsheet_Application" target="_blank">https://github.com/lshearer20/Spreadsheet_Application</a></li></p>
+                
+
+                <iframe id="ytplayer" style="display: block; margin: auto;" type="text/html" width=864" height="480"
+                src="https://www.youtube.com/embed/4LraXc0BagY"
+                frameborder="1"></iframe>
+
 
             <!--foooter-->
 
