added some more navigation and resume

--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
     </head>
     <body>
             <header id="home">
+                <div class="added">
+                    <ul class="nav__links">
+                        <li><a href="#work">Projects</a></li>
+                        <li><a href="portfolio-Resume.html">Resume</a></li>
+                        <li><a href="https://github.com/lshearer20" target="_blank">Github</a></li>
+                        <li><a href="https://www.linkedin.com/in/luke-shearer/" target="_blank">Linkedin</a></li>
+                        <a class="cta" href="mailto:luke.t.shearer@gmail.com"><button>Contact</button></a>
+                     </ul>
+                </div>
+
                 <div class="logo">
                     <img src="" alt=""> <!--img/DevLukeLogo.png-->
                 </div>
@@ -32,6 +42,7 @@
                         <li class="nav__item"><a href="#services" class="nav__link">My services</a></li>
                         <li class="nav__item"><a href="#about" class="nav__link">About Me</a></li>
                         <li class="nav__item"><a href="#work" class="nav__link">My Work</a></li>
+                        <li class="nav__item"><a href="portfolio-Resume.html" class="nav__link">My Resume</a></li>
                     </ul>
                 </nav>
             </header>
