Added projects and edited projects

--- a/index.html
+++ b/index.html
@@ -129,6 +129,17 @@
                     <a href="portfolio-RoR_Messenger.html" class="portfolio__item">
                         <img src="img/Rails_Project-Main.png" alt="" class="portfolio__img">
                     </a>
+                </a>
+                <!-- Portfolio Item 07-->
+                <a href="portfolio-Minecraft_tournament.html" class="portfolio__item">
+                    <img src="img/paddle_Main.png" alt="" class="portfolio__img">
+                </a>
+
+                <!-- Portfolio Item 08-->
+                <a href="portfolio-FriendlyFoodFinder.html" class="portfolio__item">
+                    <img src="img/FriendlyFoodFinder_main.png" alt="" class="portfolio__img">
+                </a>
+
 
                 </div>
             </section>
