--- a/portfolio-FriendlyFoodFinder.html
+++ b/portfolio-FriendlyFoodFinder.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Luke Shearer's Portfolio Website</title>
-        <link rel="stylesheet"
+        <link rel="stylesheet" 
         href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
         <link rel="stylesheet" 
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" 
@@ -38,40 +38,39 @@
             <!-- Introduction -->
             <seciton class="intro">
                 <h1 class="section__title section__title--intro">
-                    <strong>Space Shooter Game</strong>
+                    <strong>Friendly Food Finder Android App.</strong>
                 </h1>
                 <p class="section__subtitle section__subtitle--intro"></p>
-                <img src="img/Bullet_Game_SS.png" alt="port1" class="intro__img">
+                <img src="img/FriendlyFoodFinder_SS.png" alt="port1" class="intro__img">
             </seciton>
 
             <div class="portfolio-item-individual">
                 <h3>Summary:</h3>
-                <p>This project was done in C# using a framework called Monogame. It is a shooter game that I did with 3 other students for my Software Design and Architecture class. It did not get fully completed but I am proud of the work put into the project and what we did get done.
-                </p>
-                <h3>My Role:</h3>
                 <p>
-                    Helped design classes, inhereted classes, object creation design, and overall project design. Helped design overall look and sprites used. Created UI and fuctionality of different game states like menu screens, winning, losing, and playing. Created player movement, invincibility, slow motion movement, player boundaries, and player health. Helped teammates with other various parts of the project as well.
+                    This was a project I did with two other students for the Crimson Code Hackathon 2019. The application would succesfully scan a food items barcode and report to the user if any selected allergins were within the food product. We found a large (200,000+) free to use data set of food items with barcode numbers which we stored on an Azure database to allow the applicatoin to work. We were all new to Kotlin and phone applications so had a bit of a learning curve and thus did not complete as much as we were hoping but to get the basic functioning within the Hackathon made us happy.
+                    This project is not functioning anymore due to the database being taken down so I don't have video showing off the application unfortunately, but you can still view the Github.
                 </p>
-                <h3>Technologies Used:</h3>
-                <p>
-                    <li>C#</li>
-                    <li>Monogame framework</li>
-                    <li>Visual Studio</li>
-                </p>
-                <h3>Notable Features:</h3>
-                <p>
-                    <li>Difficulty Settings</li>
-                    <li>Pause / Resume</li>
-                    <li>Player invincibility and slow motion movement</li>
-                    <li>Enemy Waves / Bosses</li>
-                </p>
-                <p>Github: <a href="https://github.com/lshearer20/TeamRocketGame" target="_blank">https://github.com/lshearer20/TeamRocketGame</a>
-                </p>
-                
+                    <h3>My Role:</h3>
+                    <p>
+                        I worked on designing the functionality of the application with the other two students. After we had a plan I mainly worked on the barcode scanner which I was able to find a free to use API to implement this. I also helped out with the UI after completing the scanner. 
+                    </p>
+                    <h3>Technologies Used:</h3>
+                    <p>
+                        <li>Kotlin</li>
+                        <li>Andriod Studio</li>
+                        <li>SQL</li>
+                        <li>Azure</li>
+                        <li>Visual Studio</li>
+                        <li>C#</li>
+                    </p>
+                    <h3>Notable Features:</h3>
+                    <p>
+                        <li>Scan food item barcodes and report to user if selected allergins / ingredients are in the food</li>
+                        <li>Android Phone Application</li>
+                    </p>
 
-                <iframe id="ytplayer" style="display: block; margin: auto;" type="text/html" width=864" height="480"
-                src="https://www.youtube.com/embed/TautB0RrgHk"
-                frameborder="1"></iframe>
+                <p>Github API: <a href="https://github.com/lshearer20/FriendlyFoodFinder" target="_blank">https://github.com/lshearer20/FriendlyFoodFinder</a></p>
+                <p><img src="img/FriendlyFoodFinder_SS.png" alt="port1" class="intro__img"></p>
 
 
             <!--foooter-->
