--- a/portfolio-Minecraft_tournament.html
+++ b/portfolio-Minecraft_tournament.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Luke Shearer's Portfolio Website</title>
-        <link rel="stylesheet"
+        <link rel="stylesheet" 
         href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
         <link rel="stylesheet" 
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" 
@@ -38,39 +38,39 @@
             <!-- Introduction -->
             <seciton class="intro">
                 <h1 class="section__title section__title--intro">
-                    <strong>Space Shooter Game</strong>
+                    <strong>Minecraft Tournament Webpage</strong>
                 </h1>
                 <p class="section__subtitle section__subtitle--intro"></p>
-                <img src="img/Bullet_Game_SS.png" alt="port1" class="intro__img">
+                <img src="img/paddle_ss.png" alt="port1" class="intro__img">
             </seciton>
 
             <div class="portfolio-item-individual">
                 <h3>Summary:</h3>
-                <p>This project was done in C# using a framework called Monogame. It is a shooter game that I did with 3 other students for my Software Design and Architecture class. It did not get fully completed but I am proud of the work put into the project and what we did get done.
-                </p>
-                <h3>My Role:</h3>
                 <p>
-                    Helped design classes, inhereted classes, object creation design, and overall project design. Helped design overall look and sprites used. Created UI and fuctionality of different game states like menu screens, winning, losing, and playing. Created player movement, invincibility, slow motion movement, player boundaries, and player health. Helped teammates with other various parts of the project as well.
+                    This project was my senior design project done with three other students. The project itself is a webpage that allows users to create a tournament with seleceted features to be tracked within a Minecraft server. The page will then show player statistics from within the game for tournament purposes.
                 </p>
-                <h3>Technologies Used:</h3>
-                <p>
-                    <li>C#</li>
-                    <li>Monogame framework</li>
-                    <li>Visual Studio</li>
-                </p>
-                <h3>Notable Features:</h3>
-                <p>
-                    <li>Difficulty Settings</li>
-                    <li>Pause / Resume</li>
-                    <li>Player invincibility and slow motion movement</li>
-                    <li>Enemy Waves / Bosses</li>
-                </p>
-                <p>Github: <a href="https://github.com/lshearer20/TeamRocketGame" target="_blank">https://github.com/lshearer20/TeamRocketGame</a>
-                </p>
-                
+                    <h3>My Role:</h3>
+                    <p>
+                        I Mainly worked on the backend of the project. I created a Javascript application implementing GraphQL to request and pull data from our Firebase Database. The database would be updated via a plugin to the minecraft game server. I then worked on the Anguluar / Typescript UI webpage to send request to the backend for the data in the database. I also helped out a little with the UI design and creation.
+                    </p>
+                    <h3>Technologies Used:</h3>
+                    <p>
+                        <li>Angular</li>
+                        <li>Typescript / Javascript</li>
+                        <li>GraphQL</li>
+                    </p>
+                    <h3>Notable Features:</h3>
+                    <p>
+                        <li>Continues updating of player statistics within a minecraft server</li>
+                        <li>Mulitple views of different in game player statistics with leaderboard</li>
+                        <li>Minecraft server statistics page</li>
+                    </p>
 
+                <p>Github UI: <a href="https://github.com/kelseydonavin/MC_UI" target="_blank">https://github.com/kelseydonavin/MC_UI</a></p>
+                <p>Github API: <a href="https://github.com/kelseydonavin/AIMS_API" target="_blank">https://github.com/kelseydonavin/AIMS_API</a></p>
+                <p>Github Servier Plugin: <a href="https://github.com/kelseydonavin/MCPlugin" target="_blank">https://github.com/kelseydonavin/MCPlugin</a></p>
                 <iframe id="ytplayer" style="display: block; margin: auto;" type="text/html" width=864" height="480"
-                src="https://www.youtube.com/embed/TautB0RrgHk"
+                src="https://www.youtube.com/embed/1MkGluz7ZWM"
                 frameborder="1"></iframe>
 
 
