--- a/portfolio-Restaurant.html
+++ b/portfolio-Restaurant.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="icon" href="img/Icon_tab.png">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Luke Shearer's Portfolio Website</title>
@@ -44,27 +45,45 @@
             </seciton>
 
             <div class="portfolio-item-individual">
-                <p><li>This project was done in C# and PostgresSQL for the Database. I did this project with 2 other students in my Introduction to databases class. I worked on the creation of the database from some Yelp.com data which intailed creating tables, attributes and relationships for that data. I also worked on creating the triggers for the UI, and a little bit of the UI and SQL queries.</li>
-                <li>Github: <a href="https://github.com/lshearer20/Restaurant_Application" target="_blank">https://github.com/lshearer20/Restaurant_Application</a></li></p>
+        
+                <h3>Summary:</h3>
+                <p>This project is a restaurant application to allow the user to navigate businesses and their information based on a selected location. I did this project with 2 other students in my Introduction to Databases class.</p>
+
+                <h3>My Role:</h3>
+                <p>My role in this project was to initially create the ER(Entity Relationship) diagram for the data we were using and then create the tables, attributes and relationships based on that diagram. I also created those tables for our PostgreSQL database to allow for the data to be inserted. I also worked on the Triggers and Updates for the database when event occurred in the UI. I created the checkin window with functioning checking button as well as helped with other various UI tasks and SQL calls within the application.</p>
+
+                <h3>Technologies Used:</h3>
+                <p>
+                <li>C# / Winforms</li>
+                <li>Visual Studio</li>
+                <li>SQL</li>
+                <li>PostgreSQL</li>
+            </p>
+
+                <h3>Notable Features:</h3>
+                <p>
+                <li>Find User</li>
+                <li>Find Business based on location</li>
+                <li>Sort business's based on catagories</li>
+                <li>See business reviews with the ability to like reviews or leave new reviews</li>
+                <li>View number of checkins per month for a selected bussiness and add a checkin to that business</li>
+                    </p>
+                <p>Github: <a href="https://github.com/lshearer20/Restaurant_Application" target="_blank">https://github.com/lshearer20/Restaurant_Application</a></li>
                 
 
                 <iframe id="ytplayer" style="display: block; margin: auto;" type="text/html" width=864" height="480"
                 src="https://www.youtube.com/embed/BxNd_8KqGYY"
                 frameborder="1"></iframe>
-
+            </p>
 
             <!--foooter-->
-
             <footer class="footer">
                 <a href="mailto:luke.t.shearer@gmail.com" class="footer__link">luke.t.shearer@gmail.com</a>
                 <ul class="social-list">
-                    <li class="social-list__item"><a class="social-list__link" href="https://codepen.io"><i class="fab fa-github"></i></a></li>
-                    <li class="social-list__item"><a class="social-list__link" href="https://dribble.com"><i class="fab fa-github"></i></a></li>
-                    <li class="social-list__item"><a class="social-list__link" href="https://twitter.com">
-                        <i class="fab fa-linkedin"></i>
-                    </a></li>
-                    <li class="social-list__item"><a class="social-list__link" href="https://github.com">
-                        <i class="fab fa-github"></i>
+                    <li class="social-list__item"><a class="social-list__link" href="https://github.com/lshearer20" target="_blank">
+                        <i class="fab fa-github"></i></a></li>
+                    <li class="social-list__item"><a class="social-list__link" href="https://www.linkedin.com/in/luke-shearer/" target="_blank">
+                        <i class="fab fa-linkedin"></i></a></li>
                     </a></li>
                 </ul>
             </footer>
