--- a/portfolio-Spreadsheet.html
+++ b/portfolio-Spreadsheet.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="icon" href="img/Icon_tab.png">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Luke Shearer's Portfolio Website</title>
@@ -44,9 +45,30 @@
             </seciton>
 
             <div class="portfolio-item-individual">
-                <p><li>This project is a simple spreadsheet done using a C# winforms application. This was a project for my object oriented software principles class. The project supports save, load, cell referencing, and simple arithmetic calculations with correct precedence.</li>
-                <li>Github: <a href="https://github.com/lshearer20/Spreadsheet_Application" target="_blank">https://github.com/lshearer20/Spreadsheet_Application</a></li></p>
-                
+                <h3>Summary:</h3>
+                <p>This project is a spreadsheet application allowing for simple arithmetic with correct precedence and cell referencing. This was a solo project for my Object-Oriented Software Principles class. The project supports save, load, cell referencing, and simple arithmetic calculations with correct precedence.
+                </p>
+                <h3>My Role:</h3>
+                <p>
+                    The entire project with support from in class guidance and the professor.
+                </p>
+                <h3>Techonologies Used:</h3>
+                <p>
+                    <li>C# / Winforms</li>
+                    <li>Visual Studio</li>
+                    <li>N-Unit testing</li>
+                </p>
+                <h3>Notable Features:</h3>
+                <p>
+                    <li>Correct precedence for simple arithmetic</li>
+                    <li>Cell referencing</li>
+                    <li>Save / Load</li>
+                    <li>Redo / Undo</li>
+                    <li>Cell color change</li>
+                    <li>Demo button to automatically fill up cells</li>
+                </p>
+                <p>Github: <a href="https://github.com/lshearer20/Spreadsheet_Application" target="_blank">https://github.com/lshearer20/Spreadsheet_Application</a>
+                </p>
 
                 <iframe id="ytplayer" style="display: block; margin: auto;" type="text/html" width=864" height="480"
                 src="https://www.youtube.com/embed/4LraXc0BagY"
@@ -58,13 +80,10 @@
             <footer class="footer">
                 <a href="mailto:luke.t.shearer@gmail.com" class="footer__link">luke.t.shearer@gmail.com</a>
                 <ul class="social-list">
-                    <li class="social-list__item"><a class="social-list__link" href="https://codepen.io"><i class="fab fa-github"></i></a></li>
-                    <li class="social-list__item"><a class="social-list__link" href="https://dribble.com"><i class="fab fa-github"></i></a></li>
-                    <li class="social-list__item"><a class="social-list__link" href="https://twitter.com">
-                        <i class="fab fa-linkedin"></i>
-                    </a></li>
-                    <li class="social-list__item"><a class="social-list__link" href="https://github.com">
-                        <i class="fab fa-github"></i>
+                    <li class="social-list__item"><a class="social-list__link" href="https://github.com/lshearer20" target="_blank">
+                        <i class="fab fa-github"></i></a></li>
+                    <li class="social-list__item"><a class="social-list__link" href="https://www.linkedin.com/in/luke-shearer/" target="_blank">
+                        <i class="fab fa-linkedin"></i></a></li>
                     </a></li>
                 </ul>
             </footer>
