--- a/portfolio-Eventure.html
+++ b/portfolio-Eventure.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="icon" href="img/Icon_tab.png">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Luke Shearer's Portfolio Website</title>
@@ -44,8 +45,28 @@
             </seciton>
 
             <div class="portfolio-item-individual">
-                <p><li>This project myself and 3 other students created an event finding application design in AdobeXD. The project did not consist of any coding and was simply to use design principles to create a user friendly application of our choice. We created an event finding and creating application using AdobeXD.</li>
-                <li>Github: <a href="https://github.com/lshearer20/Eventure" target="_blank">https://github.com/lshearer20/Eventure</a></li></p>
+                <h3>Summary:</h3>
+                <p>This project was to design a phone application of our choice. The project was done with 3 other students in my Human Computer Interactions class. The project did not consist of any coding and was simply to use design principles to create a user friendly application of our choice. We created an event finding and creating application using AdobeXD.
+                </p>
+                    <h3>My Role:</h3>
+                    <p>
+                        We all came together for the overall design of the application using design principles and making edits as the project progressed.
+                    </p>
+                    <h3>Technologies Used:</h3>
+                    <p>
+                        <li>AdobeXD</li>
+                    </p>
+                    <h3>Notable Features:</h3>
+                    <p>
+                        <li>*All in AdobeXD and not a fully functional Application*</li>
+                        <li>Create user</li>
+                        <li>Create event</li>
+                        <li>Find events</li>
+                        <li>Manage favorited / created events</li>
+                        <li>Send notifications</li>
+                    </p>
+
+                <p>Github: <a href="https://github.com/lshearer20/Eventure" target="_blank">https://github.com/lshearer20/Eventure</a></p>
                 
 
                 <iframe id="ytplayer" style="display: block; margin: auto;" type="text/html" width=864" height="480"
@@ -58,13 +79,10 @@
             <footer class="footer">
                 <a href="mailto:luke.t.shearer@gmail.com" class="footer__link">luke.t.shearer@gmail.com</a>
                 <ul class="social-list">
-                    <li class="social-list__item"><a class="social-list__link" href="https://codepen.io"><i class="fab fa-github"></i></a></li>
-                    <li class="social-list__item"><a class="social-list__link" href="https://dribble.com"><i class="fab fa-github"></i></a></li>
-                    <li class="social-list__item"><a class="social-list__link" href="https://twitter.com">
-                        <i class="fab fa-linkedin"></i>
-                    </a></li>
-                    <li class="social-list__item"><a class="social-list__link" href="https://github.com">
-                        <i class="fab fa-github"></i>
+                    <li class="social-list__item"><a class="social-list__link" href="https://github.com/lshearer20" target="_blank">
+                        <i class="fab fa-github"></i></a></li>
+                    <li class="social-list__item"><a class="social-list__link" href="https://www.linkedin.com/in/luke-shearer/" target="_blank">
+                        <i class="fab fa-linkedin"></i></a></li>
                     </a></li>
                 </ul>
             </footer>
