--- a/portfolio-Rain_Predictor.html
+++ b/portfolio-Rain_Predictor.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="icon" href="img/Icon_tab.png">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Luke Shearer's Portfolio Website</title>
@@ -44,8 +45,26 @@
             </seciton>
 
             <div class="portfolio-item-individual">
-                <p><li>This project was done in C# and PostgresSQL for the Database. I did this project with 2 other students in my Introduction to databases class. I worked on the creation of the database from some Yelp.com data which intailed creating tables, attributes and relationships for that data. I also worked on creating the triggers for the UI, and a little bit of the UI and SQL queries.</li>
-                <li>Github: <a href="https://github.com/lshearer20/Rain-Predictor" target="_blank">https://github.com/lshearer20/Rain-Predictor</a></li></p>
+                <h3>Summary:</h3>
+                <p>This was a machine learning project done for my Introduction to Machine Learning class. I did this project with one other student. The project takes a set of weather data and runs a "Random Forest Binary Classifier" over it to then be able to predict whether or not it will rain the following day based on certain weather attributes.
+
+                </p>
+                <h3>My Role:</h3>
+                <p>
+                    This project was very collabrative and done nearly completely together.
+                </p>
+                <h3>Technologies Used:</h3>
+                <p>
+                    <Li>Python</Li>
+                    <li>Google Colab</li>
+                    <li>Sklearn's Random Forest Classifier</li>
+                </p>
+                <h3>Notable Features:</h3>
+                <p>
+                    <li>Predict chance it will rain the following day</li>
+                </p>
+                <p>Github: <a href="https://github.com/lshearer20/Rain-Predictor" target="_blank">https://github.com/lshearer20/Rain-Predictor</a>
+            </p>
                 
 
                 <iframe id="ytplayer" style="display: block; margin: auto;" type="text/html" width=864" height="480"
@@ -60,13 +79,10 @@
             <footer class="footer">
                 <a href="mailto:luke.t.shearer@gmail.com" class="footer__link">luke.t.shearer@gmail.com</a>
                 <ul class="social-list">
-                    <li class="social-list__item"><a class="social-list__link" href="https://codepen.io"><i class="fab fa-github"></i></a></li>
-                    <li class="social-list__item"><a class="social-list__link" href="https://dribble.com"><i class="fab fa-github"></i></a></li>
-                    <li class="social-list__item"><a class="social-list__link" href="https://twitter.com">
-                        <i class="fab fa-linkedin"></i>
-                    </a></li>
-                    <li class="social-list__item"><a class="social-list__link" href="https://github.com">
-                        <i class="fab fa-github"></i>
+                    <li class="social-list__item"><a class="social-list__link" href="https://github.com/lshearer20" target="_blank">
+                        <i class="fab fa-github"></i></a></li>
+                    <li class="social-list__item"><a class="social-list__link" href="https://www.linkedin.com/in/luke-shearer/" target="_blank">
+                        <i class="fab fa-linkedin"></i></a></li>
                     </a></li>
                 </ul>
             </footer>
