--- a/portfolio-RoR_Messenger.html
+++ b/portfolio-RoR_Messenger.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="icon" href="img/Icon_tab.png">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Luke Shearer's Portfolio Website</title>
@@ -44,8 +45,26 @@
             </seciton>
 
             <div class="portfolio-item-individual">
-                <p><li>This was a small project that I ran through to help me get a little more familiar with Ruby and Ruby on Rails.</li>
-                <li>Github: <a href="https://github.com/lshearer20/Messenger-Application---RoR" target="_blank">https://github.com/lshearer20/Messenger-Application---RoR</a></li></p>
+                <h3>Summary:</h3>
+                <p>This was a small project that I ran through to help me get a little more familiar with Ruby and Ruby on Rails.
+                </p>
+                    <h3>My Role:</h3>
+                    <p>
+                        Created following tutorial and instructions for an introduction to Ruby on Rails.
+                    </p>
+                    <h3>Technologies Used:</h3>
+                    <p>
+                        <li>Ruby</li>
+                        <li>Rails</li>
+                        <li>Visual Studio Code</li>
+                        <li>SQLite</li>
+                    </p>
+                    <h3>Notable Features:</h3>
+                    <p>
+                        <li>View past messags</li>
+                        <li>Enter new messages</li>
+                    </p>
+                <p>Github: <a href="https://github.com/lshearer20/Messenger-Application---RoR" target="_blank">https://github.com/lshearer20/Messenger-Application---RoR</a></p>
                 
 
                 <iframe id="ytplayer" style="display: block; margin: auto;" type="text/html" width=864" height="480"
@@ -58,13 +77,10 @@
             <footer class="footer">
                 <a href="mailto:luke.t.shearer@gmail.com" class="footer__link">luke.t.shearer@gmail.com</a>
                 <ul class="social-list">
-                    <li class="social-list__item"><a class="social-list__link" href="https://codepen.io"><i class="fab fa-github"></i></a></li>
-                    <li class="social-list__item"><a class="social-list__link" href="https://dribble.com"><i class="fab fa-github"></i></a></li>
-                    <li class="social-list__item"><a class="social-list__link" href="https://twitter.com">
-                        <i class="fab fa-linkedin"></i>
-                    </a></li>
-                    <li class="social-list__item"><a class="social-list__link" href="https://github.com">
-                        <i class="fab fa-github"></i>
+                    <li class="social-list__item"><a class="social-list__link" href="https://github.com/lshearer20" target="_blank">
+                        <i class="fab fa-github"></i></a></li>
+                    <li class="social-list__item"><a class="social-list__link" href="https://www.linkedin.com/in/luke-shearer/" target="_blank">
+                        <i class="fab fa-linkedin"></i></a></li>
                     </a></li>
                 </ul>
             </footer>
