--- a/portfolio-FriendlyFoodFinder.html
+++ b/portfolio-FriendlyFoodFinder.html
@@ -38,7 +38,7 @@
             <!-- Introduction -->
             <seciton class="intro">
                 <h1 class="section__title section__title--intro">
-                    <strong>Friendly Food Finder Android App.</strong>
+                    <strong>Friendly Food Finder App.</strong>
                 </h1>
                 <p class="section__subtitle section__subtitle--intro"></p>
                 <img src="img/FriendlyFoodFinder_SS.png" alt="port1" class="intro__img">
