--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                     <ul class="nav__links">
                         <li><a href="#work">Projects</a></li>
                         <li><a href="portfolio-Resume.html">Resume</a></li>
-                        <li><a href="https://github.com/lshearer20" target="_blank">Github</a></li>
-                        <li><a href="https://www.linkedin.com/in/luke-shearer/" target="_blank">Linkedin</a></li>
+                        <li><a href="https://github.com/lshearer20" target="_blank">GitHub</a></li>
+                        <li><a href="https://www.linkedin.com/in/luke-shearer/" target="_blank">LinkedIn</a></li>
                         <a class="cta" href="mailto:luke.t.shearer@gmail.com"><button>Contact</button></a>
                      </ul>
                 </div>
@@ -63,17 +63,40 @@
                 <div class="services">
                     <div class="service">
                         <h3>Languages</h3>
-                        <p><li>C# (Intermediate)</li><li>C/C++ (Intermediate)</li><li>SQL (Intermediate)</li><li>Python (Beginner)</li><li>Java (Beginner)</li><li>HTML/CSS (Beginner)</li></p>
+                        <p><li>C# (Experienced)</li>
+                            <li>C/C++ (Experienced)</li>
+                            <li>SQL (Intermediate)</li>
+                            <li>Python (Intermediate)</li>
+                            <li>Java (Beginner)</li>
+                            <li>HTML/CSS (Beginner)</li></p>
                     </div> <!-- /service-->
 
                     <div class="service">
                         <h3>Technologies</h3>
-                        <p><li>Visual Studio</li><li>Visual Studio Code</li><li>Git / Github</li><li>GitKraken</li><li>Linux</li><li>PostgreSQL</li></p>
+                        <p> <li>Git (Version Control)</li>
+                            <li>GitHub</li>
+                            <li>Linux</li>
+                            <li>Postgre</li>
+                            <li>Visual Studio</li>
+                            <li>Visual Studio Code</li>
+                            <li>GitKraken</li>
+                            <li>Eclipse</li></p>
                     </div> <!-- /service-->
 
                     <div class="service">
                         <h3>Courses</h3>
-                        <p><li>Advanced Data Structures C/C++</li><li>Object-Oriented Software Principles</li><li>Programming Language Design</li><li>Systems Programming C/C++</li><li>Software Engineering Principles</li><li>Software Maintenance</li><li>Intro to Computer Networks</li><li>Intro To Machine Learning</li><li>Intro to Database Systems</li><li>Systems Concepts and Programming</li><li>Software Design and Architecture</li><li>And More</li></p>
+                        <p><li>Advanced Data Structures C/C++</li>
+                            <li>Object-Oriented Software Principles</li>
+                            <li>Programming Language Design</li>
+                            <li>Systems Programming C/C++</li>
+                            <li>Software Engineering Principles</li>
+                            <li>Software Maintenance</li>
+                            <li>Computer Networks</li>
+                            <li>Machine Learning</li>
+                            <li>Database Systems</li>
+                            <li>Systems Concepts and Programming</li>
+                            <li>Software Design and Architecture</li>
+                            <li>And More</li></p>
                     </div> <!-- /service-->
                 </div> <!-- / services-->
 
@@ -87,7 +110,7 @@
                 <p class="section__subtitle section__subtitle--about">Washington State University Graduate</p>
 
                 <div class="about-me__body">
-                    <p>I recently graduated with a B.S. in Software Engineering from WSU. I am eager to find a job as a Developer in a company that cultivates learning and growth.</p>
+                    <p>I recently graduated with a B.S. in Software Engineering from WSU. I am eager to find a job as a software developer in a company that cultivates learning and growth.</p>
                     <p>Previous to WSU, I graduated with a B.S in Kinesiology from Western Washington University but decided to change career paths to quench my thirst for creation, skill improvement and acquisition.</p>
                 </div>
 
@@ -97,47 +120,47 @@
             <!-- My Work-->
 
             <section class="my-work" id="work">
-                <h2 class="section__title section__title--work">My Work</h2>
+                <h2 class="section__title section__title--work">My work</h2>
                 <p class="section__subtitle section__subtitle--work">A selection of my work</p>
 
                 <div class="portfolio">
 
                     <!-- Portfolio Item 01-->
                     <a href="portfolio-Restaurant.html" class="portfolio__item">
-                        <img src="img/restaurant_main.png" alt="" class="portfolio__img">
+                        <img src="img/restaurant_main2.png" alt="" class="portfolio__img">
                     </a>
 
                     <!-- Portfolio Item 02-->
                     <a href="portfolio-Spreadsheet.html" class="portfolio__item">
-                        <img src="img/spreadsheet_main.png" alt="" class="portfolio__img">
+                        <img src="img/spreadsheet_main2.png" alt="" class="portfolio__img">
                     </a>
 
                     <!-- Portfolio Item 03-->
                     <a href="portfolio-Rain_Predictor.html" class="portfolio__item">
-                        <img src="img/ML-Python_main.png" alt="" class="portfolio__img">
+                        <img src="img/ML-Python_main2.png" alt="" class="portfolio__img">
                     </a>
 
                     <!-- Portfolio Item 04-->
                     <a href="portfolio-TeamRocketGame.html" class="portfolio__item">
-                        <img src="img/Bullet_Game_Main.png" alt="" class="portfolio__img">
+                        <img src="img/Bullet_Game_Main2.png" alt="" class="portfolio__img">
                     </a>
                     <!-- Portfolio Item 05-->
                     <a href="portfolio-Eventure.html" class="portfolio__item">
-                        <img src="img/Eventure_Main.png" alt="" class="portfolio__img">
+                        <img src="img/Eventure_Main2.png" alt="" class="portfolio__img">
                     </a>
                     <!-- Portfolio Item 06-->
                     <a href="portfolio-RoR_Messenger.html" class="portfolio__item">
-                        <img src="img/Rails_Project-Main.png" alt="" class="portfolio__img">
+                        <img src="img/Rails_Project-Main2.png" alt="" class="portfolio__img">
                     </a>
                 </a>
                 <!-- Portfolio Item 07-->
                 <a href="portfolio-Minecraft_tournament.html" class="portfolio__item">
-                    <img src="img/paddle_Main.png" alt="" class="portfolio__img">
+                    <img src="img/paddle_Main2.png" alt="" class="portfolio__img">
                 </a>
 
                 <!-- Portfolio Item 08-->
                 <a href="portfolio-FriendlyFoodFinder.html" class="portfolio__item">
-                    <img src="img/FriendlyFoodFinder_main.png" alt="" class="portfolio__img">
+                    <img src="img/FriendlyFoodFinder_main2.png" alt="" class="portfolio__img">
                 </a>
 
 
